# decTestRunner

./: LICENSE  Makefile.am  Makefile.in  README  config.h.in  configure  configure.in  decTestRunner.c
testcases/dectest/: quantize.decTest
