bin_PROGRAMS = decTestRunner
decTestRunner_SOURCES = decTestRunner.c \
  decNumber/decContext.h decNumber/decNumber.h decNumber/decNumberLocal.h \
  decNumber/decContext.c decNumber/decNumber.c \
  decNumber/decimal32.h decNumber/decimal64.h decNumber/decimal128.h \
  decNumber/decimal32.c decNumber/decimal64.c decNumber/decimal128.c \
  decDPD.h
