#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(FULL-PACKAGE-NAME, VERSION, BUG-REPORT-ADDRESS)
AM_INIT_AUTOMAKE([foreign])
AC_CONFIG_SRCDIR([decTestRunner.c])
AC_CONFIG_HEADER([config.h])
AC_DEFINE([DECEXTFLAG], 1, [Define to 1 to enable extended flags.])
AC_DEFINE([DECSUBSET], 1, [Define to 1 to enable subset arithmetic.])
AC_DEFINE([DECNUMDIGITS], 34, [The default number of digits that can be held.])
AC_DEFINE([DECCHECK], 1, [Define to 1 for extended operand checking (including NULL operands).])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([stdlib.h string.h strings.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_C_INLINE
AC_C_RESTRICT
AC_TYPE_SIZE_T

# Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_REALLOC
AC_FUNC_VPRINTF
AC_CHECK_FUNCS([floor memset sqrt strcasecmp strdup strrchr])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
